--- a/css/style.css
+++ b/css/style.css
@@ -4989,7 +4989,7 @@ a.ui-button:active, .ui-button:active,
 	display: block;
 	font-size: 28px;
 	line-height: 26px;
-	color: #D3D3D3;
+	color: #9B9B9B;
 	font-weight: 400;
 	margin-bottom: 35px;
 }
