--- a/css/style.css
+++ b/css/style.css
@@ -4954,33 +4954,16 @@ a.ui-button:active, .ui-button:active,
 	bottom: -10px;
 }
 
-.clients-section .platinum-carousel{
+.clients-section .gold-carousel{
 	position: relative;
 	padding: 45px 0;
 }
 
-.clients-section .platinum-sponsors{
+.clients-section .gold-sponsors{
 	position: relative;
 	border-bottom: 2px dashed rgba(240,197,46,.40);
 	text-align: center;
 	margin-bottom: 60px;
-}
-
-.clients-section .platinum-sponsors h4{
-	position: relative;
-	display: block;
-	font-size: 28px;
-	line-height: 26px;
-	color: #f14b59;
-	font-weight: 400;
-}
-
-.clients-section .gold-sponsors{
-	position: relative;
-	max-width: 890px;
-	margin: 0 auto;
-	text-align: center;
-	padding-bottom: 110px;
 }
 
 .clients-section .gold-sponsors h4{
@@ -4989,16 +4972,52 @@ a.ui-button:active, .ui-button:active,
 	font-size: 28px;
 	line-height: 26px;
 	color: #ffc600;
+	font-weight: 600;
+}
+
+.clients-section .silver-sponsors{
+	position: relative;
+	border-bottom: 2px dashed rgba(240,197,46,.40);
+	max-width: 1200px;
+	margin: 0 auto;
+	text-align: center;
+	padding-bottom: 50px;
+}
+
+.clients-section .silver-sponsors h4{
+	position: relative;
+	display: block;
+	font-size: 28px;
+	line-height: 26px;
+	color: #9B9B9B;
 	font-weight: 400;
 	margin-bottom: 35px;
 }
 
+.clients-section .bronze-sponsors{
+	position: relative;
+	max-width: 890px;
+	margin: 0 auto;
+	text-align: center;
+	padding-bottom: 110px;
+}
+
+.clients-section .bronze-sponsors h4{
+	position: relative;
+	display: block;
+	font-size: 28px;
+	line-height: 26px;
+	color: #cd7f32;
+	font-weight: 300;
+	margin-bottom: 35px;
+}
 .clients-section .sponsors-outer{
 	position: relative;
 }
 
 .clients-section .slide-item{
 	position: relative;
+	list-style: none;
 }
 
 .clients-section .sponsors-outer .image{
@@ -5103,7 +5122,7 @@ a.ui-button:active, .ui-button:active,
 	display: none;
 }
 
-.clients-section.style-two .gold-sponsors{
+.clients-section.style-two .silver-sponsors{
 	padding-bottom: 90px;
 }
 
@@ -5118,14 +5137,13 @@ a.ui-button:active, .ui-button:active,
 	display: none;
 }
 
-.clients-section.style-three .platinum-sponsors{
+.clients-section.style-three .gold-sponsors{
 	margin-bottom: 80px;
 	padding-bottom: 35px;
 	border-bottom: 2px dashed rgba(240,197,46,.40);
 }
 
 .clients-section.style-three .sponsors-outer .image{
-	border: 2px solid #e0e0e0;
 	padding: 33px 20px;
 }
 
@@ -5141,7 +5159,7 @@ a.ui-button:active, .ui-button:active,
 	display: none;
 }
 
-.clients-section.style-four .platinum-carousel{
+.clients-section.style-four .gold-carousel{
 	padding: 100px 0;
 }
 
@@ -9974,4 +9992,30 @@ a.ui-button:active, .ui-button:active,
 
 .main-header .header-upper .logo-box .logo img{
   height: 80px
+}
+
+
+/* .owl-stage-outer {
+	display: flex;
+	justify-content: center;
+} */
+
+.gold-sponsors ul, .silver-sponsors ul, .bronze-sponsors ul {
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+}
+
+.slide-item { 
+
+	margin-right: 30px;
+	flex-grow: 0;
+}
+
+.gold-sponsors .slide-item {
+	width: 400px;
+}
+
+.silver-sponsors .slide-item {
+	width: 300px;
 }
