Agregar bio y actualizar datos
- Agregando la descripción de speakers al sitio, que se muestra
  con el botón 'Lee más'
- Cuando hay varias personas speakers:
    * guardar twitter urls por espacios y mostrarlas por separadas.
- Actualizar CSVs con descripción y cuentas Twitter disponible
- Modificando script para obtener la bio y twitter, y limpiando
  los valores con una función especial.

Se actualiza al index

--- a/css/style.css
+++ b/css/style.css
@@ -10070,3 +10070,12 @@ a.ui-button:active, .ui-button:active,
 .bronze-sponsors .slide-item figure {
 	height: 100px;
 }
+
+blockquote {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 10px;
+  padding-left: 15px;
+  border-left: 5px solid #6e30aa;
+  display:inline-flex;
+}
