Fix schedule tabs color on hover

--- a/css/custom.css
+++ b/css/custom.css
@@ -29,3 +29,7 @@
 nav.main-menu ul.navigation li::marker {
   content: none;
 }
+
+.shedule-tabs .tab-buttons li.tab-btn:hover {
+  background-color: #ffc600;
+}
