Increase title font size for signup section

--- a/css/custom.css
+++ b/css/custom.css
@@ -33,3 +33,7 @@ nav.main-menu ul.navigation li::marker {
 .shedule-tabs .tab-buttons li.tab-btn:hover {
   background-color: #ffc600;
 }
+
+.call-to-action .title {
+  font-size: 25px;
+}
