--- a/css/custom.css
+++ b/css/custom.css
@@ -79,6 +79,10 @@ nav.main-menu ul.navigation li::marker {
   color: #6e85d3;
 }
 
+.slides-link a {
+  color: #155e31;
+}
+
 .btn-box.contact {
   width: auto;
 }
